--- a/customer/style.scss
+++ b/customer/style.scss
@@ -1,40 +1,40 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
-
 body {
-    font-weight: 300;
-    background: #EDEFF0;
+  font-weight: 300;
+  background: #EDEFF0;
 }
 
-
 h1 {
-    text-align: center;
-    font-weight: 300;
+  text-align: center;
+  font-weight: 300;
 }
 
 h2 {
-    font-weight: 300;
-    margin: 0;
-    padding-bottom: 0.75em;
+  font-weight: 300;
+  margin: 0;
+  padding-bottom: 0.75em;
 }
-
-
 
 input:focus,
 select:focus,
 textarea:focus,
 button:focus {
-    outline: none;
+  outline: none;
 }
 
 
 /* ------- NORMALIZE CSS ----------*/
 
 html {
-  font-family: 'Lato', sans-serif; /* 1 */
+  font-family: 'Lato', sans-serif;
+  /* 1 */
   font-size: 16px !important;
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
 }
+
 
 /**
  * Remove default margin (opinionated).
@@ -44,8 +44,10 @@ body {
   margin: 0;
 }
 
+
 /* HTML5 display definitions
    ========================================================================== */
+
 
 /**
  * Correct `block` display not defined for any HTML5 element in IE 8/9.
@@ -69,6 +71,7 @@ summary {
   display: block;
 }
 
+
 /**
  * 1. Correct `inline-block` display not defined in IE 8/9.
  * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
@@ -78,9 +81,12 @@ audio,
 canvas,
 progress,
 video {
-  display: inline-block; /* 1 */
-  vertical-align: baseline; /* 2 */
+  display: inline-block;
+  /* 1 */
+  vertical-align: baseline;
+  /* 2 */
 }
+
 
 /**
  * Prevent displaying `audio` without controls in Mobile Safari 4/5/6/7.
@@ -90,6 +96,7 @@ audio:not([controls]) {
   display: none;
   height: 0;
 }
+
 
 /**
  * Address `[hidden]` styling not present in IE 8/9/10.
@@ -101,8 +108,10 @@ template {
   display: none;
 }
 
+
 /* Links
    ========================================================================== */
+
 
 /**
  * Remove the gray background color from active links in IE 10.
@@ -111,6 +120,7 @@ template {
 a {
   background-color: transparent;
 }
+
 
 /**
  * Improve readability of focused elements when they are also in an
@@ -122,8 +132,10 @@ a:hover {
   outline-width: 0;
 }
 
+
 /* Text-level semantics
    ========================================================================== */
+
 
 /**
  * Address inconsistent styling of `abbr[title]`.
@@ -132,10 +144,14 @@ a:hover {
  */
 
 abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  text-decoration: underline dotted;
+  /* 2 */
 }
+
 
 /**
  * Address inconsistent styling of b and strong.
@@ -145,13 +161,16 @@ abbr[title] {
 
 b,
 strong {
-  font-weight: inherit; /* 1 */
+  font-weight: inherit;
+  /* 1 */
 }
 
 b,
 strong {
-  font-weight: bolder; /* 2 */
+  font-weight: bolder;
+  /* 2 */
 }
+
 
 /**
  * Address styling not present in Android < 4.4.
@@ -160,6 +179,7 @@ strong {
 dfn {
   font-style: italic;
 }
+
 
 /**
  * Address variable `h1` font-size and margin within `section` and `article`
@@ -171,6 +191,7 @@ h1 {
   margin: 0.67em 0;
 }
 
+
 /**
  * Address styling not present in IE 8/9.
  */
@@ -180,6 +201,7 @@ mark {
   color: #000;
 }
 
+
 /**
  * Address inconsistent and variable font size in all browsers.
  */
@@ -187,6 +209,7 @@ mark {
 small {
   font-size: 80%;
 }
+
 
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
@@ -208,8 +231,10 @@ sub {
   bottom: -0.25em;
 }
 
+
 /* Embedded content
    ========================================================================== */
+
 
 /**
  * Correct border-style given when inside `a` element in IE 8/9/10.
@@ -219,6 +244,7 @@ img {
   border-style: none;
 }
 
+
 /**
  * Correct overflow not hidden in IE 9/10/11.
  */
@@ -227,8 +253,10 @@ svg:not(:root) {
   overflow: hidden;
 }
 
+
 /* Grouping content
    ========================================================================== */
+
 
 /**
  * Address margin not present in IE 8/9 and Safari.
@@ -238,6 +266,7 @@ figure {
   margin: 1em 40px;
 }
 
+
 /**
  * Address inconsistent styling of `hr`.
  * 1. Correct `box-sizing` set to `border-box` in Firefox.
@@ -245,10 +274,14 @@ figure {
  */
 
 hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
+  box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */
 }
+
 
 /**
  * Contain overflow in all browsers.
@@ -257,6 +290,7 @@ hr {
 pre {
   overflow: auto;
 }
+
 
 /**
  * 1. Correct inheritance and scaling of font-size for preformatted text.
@@ -267,17 +301,22 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
 }
+
 
 /* Forms
    ========================================================================== */
+
 
 /**
  * Known limitation: by default, Chrome and Safari on OS X allow very limited
  * styling of `select`, unless a `border` property is set.
  */
+
 
 /**
  * 1. Correct font properties not being inherited.
@@ -289,9 +328,12 @@ input,
 optgroup,
 select,
 textarea {
-  font: inherit; /* 1 */
-  margin: 0; /* 2 */
+  font: inherit;
+  /* 1 */
+  margin: 0;
+  /* 2 */
 }
+
 
 /**
  * Address `overflow` set to `hidden` in IE 8/9/10/11.
@@ -300,6 +342,7 @@ textarea {
 button {
   overflow: visible;
 }
+
 
 /**
  * Address inconsistent `text-transform` inheritance for `button` and `select`.
@@ -313,6 +356,7 @@ select {
   text-transform: none;
 }
 
+
 /**
  * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
  *    and `video` controls.
@@ -322,12 +366,18 @@ select {
  */
 
 button,
-html input[type="button"], /* 1 */
+html input[type="button"],
+
+/* 1 */
+
 input[type="reset"],
 input[type="submit"] {
-  -webkit-appearance: button; /* 2 */
-  cursor: pointer; /* 3 */
+  -webkit-appearance: button;
+  /* 2 */
+  cursor: pointer;
+  /* 3 */
 }
+
 
 /**
  * Re-set default cursor for disabled elements.
@@ -337,6 +387,7 @@ button[disabled],
 html input[disabled] {
   cursor: default;
 }
+
 
 /**
  * Remove inner padding and border in Firefox 4+.
@@ -348,6 +399,7 @@ input::-moz-focus-inner {
   padding: 0;
 }
 
+
 /**
  * Restore focus style in Firefox 4+ (unset by a rule above)
  */
@@ -356,6 +408,7 @@ button:-moz-focusring,
 input:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
+
 
 /**
  * It's recommended that you don't attempt to style these elements.
@@ -367,9 +420,12 @@ input:-moz-focusring {
 
 input[type="checkbox"],
 input[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
 }
+
 
 /**
  * Fix the cursor style for Chrome's increment/decrement buttons. For certain
@@ -382,6 +438,7 @@ input[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
+
 /**
  * Address `appearance` set to `searchfield` in Safari and Chrome.
  */
@@ -389,6 +446,7 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="search"] {
   -webkit-appearance: textfield;
 }
+
 
 /**
  * Remove inner padding and search cancel button in Safari and Chrome on OS X.
@@ -401,6 +459,7 @@ input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
+
 /**
  * Define consistent border, margin, and padding.
  */
@@ -411,15 +470,19 @@ fieldset {
   padding: 0.35em 0.625em 0.75em;
 }
 
+
 /**
  * 1. Correct `color` not being inherited from fieldset in IE 8/9/10/11.
  * 2. Remove padding so people aren't caught out if they zero out fieldsets.
  */
 
 legend {
-  color: inherit; /* 1 */
-  padding: 0; /* 2 */
+  color: inherit;
+  /* 1 */
+  padding: 0;
+  /* 2 */
 }
+
 
 /**
  * Remove default vertical scrollbar in IE 8/9/10/11.
@@ -428,6 +491,7 @@ legend {
 textarea {
   overflow: auto;
 }
+
 
 /**
  * Restore font weight (unset by a rule above).
