--- a/customer/components/LoginView/login-view.scss
+++ b/customer/components/LoginView/login-view.scss
@@ -1,7 +1,47 @@
 .login-view-container {
-    margin-left: 0em;
-    margin-top: 4em;
-    padding-right: 0.4em;
+  background: #41B486;
+  width: 100%;
+  height: 100vh;
+  padding: 5em 0 0 0;
 
+  .gomocha-logo {
+    width: 10em;
+    margin: 0 auto;
+    img {
+      width: 8em;
+    }
+  }
 
+  .login-panel {
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto 0 auto;
+    border-radius: 8px;
+    background: #fff;
+    text-align: center;
+    padding: 2em;
+    box-shadow: 0 5px 5px rgba(0,0,0,0.05);
+
+    h2 {
+      color: #41B486;
+    }
+
+    input {
+      padding-left: 50px;
+      height: 3.15em;
+      width: 80%;
+      border: 1px solid #cbcbd2;
+      border-radius: 4px;
+      margin-bottom: 20px;
+    }
+
+    button {
+      background: #41B486;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      width: 93%;
+      padding: 12px 16px;
+    }
+  }
 }
