--- a/customer/components/LoginView/login-view.scss
+++ b/customer/components/LoginView/login-view.scss
@@ -19,20 +19,27 @@
     border-radius: 8px;
     background: #fff;
     text-align: center;
-    padding: 2em;
+    padding: 3em 2em 2em 2em;
     box-shadow: 0 5px 5px rgba(0,0,0,0.05);
 
     h2 {
       color: #41B486;
+      padding-bottom: 2em;
     }
 
     input {
       padding-left: 50px;
-      height: 3.15em;
+      height: 2.5em;
       width: 80%;
       border: 1px solid #cbcbd2;
       border-radius: 4px;
       margin-bottom: 20px;
+      box-shadow: inset 0 1px 2px rgba(203,203,210,0.4);
+
+      &:focus {
+        box-shadow: inset 0 1px 2px rgba(203,203,210,0.2), 0 0 4px rgba(121,88,159,0.3);
+        border-color: #41B486;
+      }
     }
 
     button {
