--- a/customer/components/LoginView/login-view.scss
+++ b/customer/components/LoginView/login-view.scss
@@ -16,7 +16,8 @@
     width: 100%;
     max-width: 350px;
     margin: 0 auto 0 auto;
-    border-radius: 8px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
     background: #fff;
     text-align: center;
     padding: 3em 2em 2em 2em;
@@ -24,7 +25,7 @@
 
     h2 {
       color: #41B486;
-      padding-bottom: 2em;
+      padding-bottom: 1em;
     }
 
     input {
@@ -33,8 +34,9 @@
       width: 80%;
       border: 1px solid #cbcbd2;
       border-radius: 4px;
-      margin-bottom: 20px;
+      // margin-bottom: 20px;
       box-shadow: inset 0 1px 2px rgba(203,203,210,0.4);
+      transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 
       &:focus {
         box-shadow: inset 0 1px 2px rgba(203,203,210,0.2), 0 0 4px rgba(121,88,159,0.3);
@@ -42,13 +44,51 @@
       }
     }
 
+    img {
+      width: 1.2em;
+      position: relative;
+      right: 8.8em;
+      top: 2.2em;
+
+    }
+
     button {
       background: #41B486;
       color: #fff;
       border: none;
       border-radius: 5px;
-      width: 93%;
+      width: 95%;
       padding: 12px 16px;
+      margin-top: 25px;
     }
   }
+
+  .login-footer {
+    // padding: 20px;
+    // display: block;
+    // font-size: 17px;
+    // color: #878797;
+    // font-weight: 100;
+    background-color: #f5f5f5;
+    border-top: 1px solid #ddd;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto 0 auto;
+    text-align: center;
+    padding: 0.5em 2em 0.5em 2em;
+
+      p {
+        display: inline-block;
+        padding-right: 1em;
+        color: #878797;
+      }
+
+      a {
+        color: #41B486;
+      }
+    }
 }
