--- a/customer/style.scss
+++ b/customer/style.scss
@@ -1,6 +1,6 @@
 // @import url('https://fonts.googleapis.com/css?family=Lato');
-// @import url('https://fonts.googleapis.com/css?family=Nunito');
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+// @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 
 body {
