changed MenuFormContainer to js from jsx

--- a/customer/components/App/app.scss
+++ b/customer/components/App/app.scss
@@ -137,6 +137,7 @@
         height: 2px;
         margin-left: 1em;
         margin-top: 1em;
+        margin-bottom: 1em;
     }
 
     .fa-clock-o, .fa-heart, .fa-home, .fa-sign-out {
