--- a/customer/components/CustomOrderView/MenuItem/menu-item.scss
+++ b/customer/components/CustomOrderView/MenuItem/menu-item.scss
@@ -6,17 +6,39 @@
     padding: 0.5em 0em 0.5em 0em;
     border-radius: 3px;
     box-shadow: #999999 0px 1px;
-    
+
     select {
         margin-right: 0.5em;
     }
 }
 
-.item-top-row {
-    margin-bottom: 0.75em;
-    width: 100%;
+.item-options-modal {
+  position: absolute;
+  top: 64px;
+  left: 0;
+  background: #ffffff;
+  width: 100%;
+  height: 100%;
+
+  .item-top-row {
+      margin-bottom: 0.75em;
+      width: 100%;
+      display: inline-block;
+  }
+
+  .item-options {
+    width: 82%;
     display: inline-block;
+    padding-left: 0.5em;
 }
+
+  .item-other-options {
+      font-size: 0.85em;
+      padding-left: 0.5em;
+  }
+}
+
+
 
 .item-name-wrap {
     margin-right: 0.5em;
@@ -32,17 +54,6 @@
     .item-name {
         float: left;
     }
-}
-
-.item-options {
-    width: 82%;
-    display: inline-block;
-    padding-left: 0.5em;
-}
-
-.item-other-options {
-    font-size: 0.85em;
-    padding-left: 0.5em;
 }
 
 .item-price {
