updated user model

--- a/customer/components/CustomOrderView/OrderTotal/order-total.scss
+++ b/customer/components/CustomOrderView/OrderTotal/order-total.scss
@@ -1,7 +1,16 @@
 #order-total {
     box-shadow: #999999 0px 1px;
+
     h2 {
         text-align: left;
+    }
+
+    .fa-times {
+      float: left;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
 }
 
